Update testimonial widget: remove hover effect, add slider columns, fix alignment
CHANGES:
- Removed hover popping effect (transform: translateY(-5px))
- Added 'Slides to Show' control for slider layout (1-4 columns)
- Added 'Columns' control that works for both grid and slider
- Fixed thumbnail centering in slider layout
- Made slider cards look exactly the same as grid cards
- Added responsive breakpoints for slider (tablets: max 2, mobile: 1)
- Improved vertical alignment in slider with flexbox
- Ensured equal height cards in slider mode

SLIDER IMPROVEMENTS:
- Can now show multiple testimonials at once (1-4 slides)
- Properly aligned items with display: flex on track
- Full height cards maintained across all slides
- Consistent styling between grid and slider layouts

CONTROLS:
- Grid layout: Columns control (1-4)
- Slider layout: Slides to Show control (1-4)
- Both support responsive settings

--- a/src/scss/widgets/_testimonial.scss
+++ b/src/scss/widgets/_testimonial.scss
@@ -29,7 +29,6 @@
 
 	&:hover {
 		@include box-shadow;
-		transform: translateY(-5px);
 	}
 }
 
@@ -170,6 +169,11 @@
 
 	.slick-slide {
 		outline: none;
+		height: inherit;
+
+		> div {
+			height: 100%;
+		}
 	}
 
 	.slick-list {
@@ -178,6 +182,18 @@
 
 	.slick-slide > div {
 		padding: 0 10px;
+	}
+
+	.slick-track {
+		display: flex;
+		align-items: stretch;
+	}
+
+	// Make sure items take full height
+	.bp-testimonial-item {
+		display: flex;
+		flex-direction: column;
+		height: 100%;
 	}
 }
 
